--- a/public/app/view/admin/login/signin.html
+++ b/public/app/view/admin/login/signin.html
@@ -1,5 +1,5 @@
 <div id="loginbox">
-    <form id="loginform" class="form-vertical" action="index.html">
+    <form id="loginform" class="form-vertical" action="index.html" ng-show="login.toLogin&&!login.forggotPassword">
         <div class="control-group normal_text"> <h3><img src="http://themedesigner.in/demo/matrix-admin/img/logo.png" alt="Logo" /></h3></div>
         <div class="input-group mb-2 main_input_box">
             <div class="input-group-prepend">
@@ -11,25 +11,29 @@
             <div class="input-group-prepend">
                 <div class="input-group-text add-on bg_ly"><i class="fa fa-lock"></i></div>
             </div>
-            <input type="password" class="form-control" placeholder="Password">
+            <input id="inputPassword" type="password" class="form-control" placeholder="Password">
+            <div id="btnViewPass" class="view-pass <{login.btnShowPass?'show':''}>">
+                <i class="fa fa-eye-slash" aria-hidden="true"></i>
+            </div>
         </div>
         <div class="form-actions">
-            <span class="pull-left"><a href="#" class="flip-link btn btn-info" id="to-recover">Lost password?</a></span>
+            <span class="pull-left"><a href="" class="flip-link" id="to-recover" ng-click="login.needRecover()">Forgotten your password?</a></span>
             <span class="pull-right"><a class="btn btn-success bg_lg" href="#" role="button">Login</a></span>
         </div>
     </form>
-    <form id="recoverform" action="#" class="form-vertical">
+    <form id="recoverform" action="#" class="form-vertical" ng-show="!login.toLogin&&login.forggotPassword">
         <p class="normal_text">Enter your e-mail address below and we will send you instructions how to recover a password.</p>
 
-        <div class="controls">
-            <div class="main_input_box">
-                <span class="add-on bg_lo"><i class="icon-envelope"></i></span><input type="text" placeholder="E-mail address" />
+        <div class="input-group mb-2 main_input_box">
+            <div class="input-group-prepend">
+                <div class="input-group-text add-on bg_ly"><i class="fa fa-envelope"></i></div>
             </div>
+            <input type="email" class="form-control" placeholder="E-mail address">
         </div>
 
         <div class="form-actions">
-            <span class="pull-left"><a href="#" class="flip-link btn btn-success" id="to-login">&laquo; Back to login</a></span>
-            <span class="pull-right"><a class="btn btn-info"/>Reecover</a></span>
+            <span class="pull-left"><a href="" class="flip-link" id="to-login" ng-click="login.needLogin()">Back to login?</a></span>
+            <span class="pull-right"><a class="btn btn-info" href="#" role="button">Recover</a></span>
         </div>
     </form>
 
