--- a/public/app/view/assets/css/admin.custom.css
+++ b/public/app/view/assets/css/admin.custom.css
@@ -55,6 +55,9 @@ hr{
 .bg_db{
      background:#2E363F;
  }
+a#to-recover, a#to-login {
+    color: #fff;
+}
 #logo, #loginbox {
     width: 32%;
     margin-left: auto;
@@ -76,7 +79,8 @@ hr{
 }
 #loginbox form {
     margin: auto;
-    padding-top: 50px;
+    padding-top: 40px;
+    padding-bottom: 90px;
     width: 33%;
     background:#2E363F;
     position:relative;
@@ -84,8 +88,9 @@ hr{
     left:0;
 }
 #loginbox .form-actions {
-    margin-top: 50px;
-    padding: 14px 20px 15px;
+    margin: auto;
+    width: 75%;
+    padding: 0;
 }
 #loginbox .form-actions .pull-left {
     margin-top:0px;
@@ -96,7 +101,6 @@ hr{
 }
 #loginbox form#recoverform {
     z-index: 100;
-    display:none;
 }
 #loginbox form#recoverform .form-actions {
     margin-top: 10px;
@@ -108,6 +112,9 @@ hr{
 #loginbox .main_input_box {
     margin: auto;
     width: 75%;
+}
+#loginbox input[type="password"] {
+    padding-right: 35px;
 }
 #loginbox .main_input_box .input-group-text, #loginbox .main_input_box input {
     border:0px;
@@ -124,10 +131,11 @@ hr{
     padding:20px 0;
     margin-bottom:0px;
 }
-.form-vertical, .form-actions {
+.form-vertical {
     margin-bottom: 0;
     background:none;
     border-top:1px solid #3f4954;
+    border-bottom:1px solid #3f4954;
 }
 #loginbox .normal_text{
     padding:15px 10px;
@@ -137,7 +145,7 @@ hr{
     background:#2E363F;
     color:#fff;
 }
-#loginform .form-actions .btn {
+#loginform .form-actions .btn, #recoverform .form-actions .btn {
     border-radius: 0px;
 }
 @media (max-width:800px){
@@ -159,4 +167,21 @@ hr{
         padding:8px 0;
         margin-bottom:0px;
     }
+}
+
+.view-pass {
+    opacity: 0;
+    visibility: hidden;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 6px;
+    z-index: 9;
+}
+.view-pass.show {
+    opacity: 0.3;
+    visibility: visible;
+}
+.view-pass.show:hover {
+    opacity: 1;
 }
