--- a/public/app/view/common/copy.html
+++ b/public/app/view/common/copy.html
@@ -1,3 +1,3 @@
 <div class="copyright">
-    <p><{date|date:'yyyy'}> &copy; PF. All Rights Reserved</p>
+    <p><{date|date:'yyyy'}> &copy; FLA. All Rights Reserved</p>
 </div>
