--- a/public/app/view/common/pagging.html
+++ b/public/app/view/common/pagging.html
@@ -1,23 +1,23 @@
-<ul class="pagination">
-    <li ng-class="{disabled: pagination.isFirst(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.startPage)">
-        <a href>First</a>
-    </li>
-    <li ng-class="{disabled: !pagination.inRange(pagination.currentPage - 1)}" ng-click="pagination.setCurrent(pagination.currentPage - 1)">
-        <a href>Prev</a>
-    </li>
-    <li ng-show="pagination.inRange(pagination.pages[0] - 1)" ng-click="pagination.setCurrent(pagination.currentPage - pagination.maxNumbers)">
-        <a href>&hellip;</a>
-    </li>
-    <li ng-repeat="page in pagination.pages track by $index" ng-class="{active: pagination.isCurrent(page)}" ng-click="pagination.setCurrent(page)">
-        <a href ng-bind="page"></a>
-    </li>
-    <li ng-show="pagination.inRange(pagination.pages[pagination.pages.length - 1] + 1)" ng-click="pagination.setCurrent(pagination.currentPage + pagination.maxNumbers)">
-        <a href>&hellip;</a>
-    </li>
-    <li ng-class="{disabled: !pagination.inRange(pagination.currentPage + 1)}" ng-click="pagination.setCurrent(pagination.currentPage + 1)">
-        <a href>Next</a>
-    </li>
-    <li ng-class="{disabled: pagination.isLast(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.endPage)">
-        <a href>Last</a>
-    </li>
-</ul>
+<div class="dataTables_paginate btn-group mr-2" role="group" aria-label="First group">
+    <button type="button" class="btn cur-p btn-outline-primary" ng-class="{disabled: pagination.isFirst(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.startPage)">
+        First
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-class="{disabled: !pagination.inRange(pagination.currentPage - 1)}" ng-click="pagination.setCurrent(pagination.currentPage - 1)">
+        Prev
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-show="pagination.inRange(pagination.pages[0] - 1)" ng-click="pagination.setCurrent(pagination.currentPage - pagination.maxNumbers)">
+        &hellip;
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-repeat="page in pagination.pages track by $index" ng-class="{active: pagination.isCurrent(page)}" ng-click="pagination.setCurrent(page)">
+        <span ng-bind="page"></span>
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-show="pagination.inRange(pagination.pages[pagination.pages.length - 1] + 1)" ng-click="pagination.setCurrent(pagination.currentPage + pagination.maxNumbers)">
+        &hellip;
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-class="{disabled: !pagination.inRange(pagination.currentPage + 1)}" ng-click="pagination.setCurrent(pagination.currentPage + 1)">
+        Next
+    </button>
+    <button type="button" class="btn cur-p btn-outline-primary" ng-class="{disabled: pagination.isLast(pagination.currentPage)}" ng-click="pagination.setCurrent(pagination.endPage)">
+        Last
+    </button>
+</div>
